# cryptography-2-assignments

./: README.md
Praktikum 1/Task1/: .gitignore  CMakeLists.txt
Praktikum 1/Task1/include/: task.h
Praktikum 1/Task1/src/: Main.cpp  task_a.cpp  task_b.cpp
Praktikum1/: .gitignore  CMakeLists.txt
Praktikum1/src/: assignment_1_a.cpp  assignment_1_b.cpp  assignment_2_a.cpp  assignment_2_b.cpp  assignment_2_c.cpp
include/: task.h
src/: Main.cpp  assignment_2_c.cpp
